[package]
name = "rolkien"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
freertos-sys = {version="0.1.1", features=["stm32f4x","dbgsym"]}
#freertos-sys = {path="../freertos-sys", features=["stm32f4x","dbgsym"]}
cty = "0.2.1"
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.11"
panic-rtt-core = "0.1.1"
embedded-hal = "0.2.3"
#cortex-m-semihosting = "0.3.5"

# Cortex-M family specialization:
stm32f4 = {version = "0.9.0", features = ["stm32f401"] }
stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
